<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_create_story"
        android:title="@string/create_story"
        android:icon="@drawable/ic_pencil_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_favorite"
        android:title="@string/title_favorit"
        android:icon="@drawable/baseline_favorite_border_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_round_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>