...
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/or"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
...
